--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
-Package: BiocAsia2023
-Title: Disease outcome prediction using scdney
+Package: HKU2024
+Title: Unlocking single cell spatial omics analyses with SCDNEY
 Version: 0.1.0
 Authors@R: 
-  person(given = "Sydney Precision Bioinformatics Alliance",
+  person(given = "Sydney Data Science Centre",
          role = c("aut", "cre"),
-         email = "bioinformatics@maths.usyd.edu.au")
-Description: Workshop for single-cell disease prediction analysis.
+         email = "data-science.admin@sydney.edu.au")
+Description: Unlocking single cell spatial omics analyses with SCDNEY
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.1
 Depends: 
   Biobase,
   R (>= 4.1)
