--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-m', '30g', '-t', 'gcr.io/scdney-2024/workshop:alpha', '.']
+  args: ['build', '-m', '30g', '-t', 'gcr.io/semiotic-vial-255604/diseaseprediction:alpha', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/scdney-2024/workshop:alpha']
+  args: ['push', 'gcr.io/semiotic-vial-255604/diseaseprediction:alpha']
 options:
-  machineType: 'E2_HIGHCPU_8'
-  logging: CLOUD_LOGGING_ONLY
+  machineType: 'N1_HIGHCPU_32'
 timeout: 9600s
